[package]
name = "habitat"
version = "0.1.0"
rust-version = "1.60.0"
description = "habitat scheduler"
edition = "2021"
license = "Apache-2.0"
authors = ["ZhengYu Xu <zen-xu@outlook.com>"]
repository = "https://github.com/zen-xu/habitat"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
json-patch = "0.2"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", default-features = false, features = ["tls"] }

[dependencies.k8s-openapi]
version = "0.16.0"
features = ["v1_24", "schemars"]
default-features = false

[dependencies.kube]
version = "0.75"
features = ["admission", "runtime", "derive", "client"]
