[package]
name = "cli"
version = "0.1.0-beta0"
rust-version = "1.60.0"
description = "habitat command line tools"
edition = "2021"
license = "Apache-2.0"
authors = ["ZhengYu Xu <zen-xu@outlook.com>"]
repository = "https://github.com/zen-xu/habitat"

[dependencies]
habitat-admission = { path = "../crates/habitat-admission", version = "<1.0.0" }
habitat-api = { path = "../crates/habitat-api", version = "<1.0.0" }
habitat-controller = { path = "../crates/habitat-controller", version = "<1.0.0" }

# third party dependencies
clap = { version = "4", features = ["derive"] }
kube = { version = "0.75", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", default-features = false, features = ["tls"] }

[[bin]]
name = "admission"
path = "bin/admission.rs"

[[bin]]
name = "controller"
path = "bin/controller.rs"

[[bin]]
name = "crdgen"
path = "bin/crdgen.rs"
