[package]
name = "habitat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.75", features = ["runtime", "derive", "client"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

[dependencies.k8s-openapi]
version = "0.16.0"
features = ["v1_24"]
default-features = false

[[bin]]
name = "crdgen"
path = "src/main.rs"
