[package]
name = "habitat-controller"
version = "0.1.0"
rust-version = "1.60.0"
description = "habitat controller"
edition = "2021"
license = "Apache-2.0"
authors = ["ZhengYu Xu <zen-xu@outlook.com>"]
repository = "https://github.com/zen-xu/habitat"

[dependencies]

[[bin]]
name = "controller"
path = "src/main.rs"
