[package]
name = "habitat-admission"
version = "0.1.0"
rust-version = "1.60.0"
description = "habitat admission controller"
edition = "2021"
license = "Apache-2.0"
authors = ["ZhengYu Xu <zen-xu@outlook.com>"]
repository = "https://github.com/zen-xu/habitat"

[dependencies]
anyhow = "1"
habitat-api = { path = "../habitat-api", version = "<1.0.0" }
json-patch = "0.2"
kube = { version = "0.75", default-features = false, features = ["admission"] }
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", default-features = false, features = ["tls"] }
