[package]
name = "habitat-admission"
version = "0.1.0"
rust-version = "1.60.0"
description = "habitat admission controller"
edition = "2021"
license = "Apache-2.0"
authors = ["ZhengYu Xu <zen-xu@outlook.com>"]
repository = "https://github.com/zen-xu/habitat"

[dependencies]
anyhow = "1"
axum = "0.6"
habitat-api = { path = "../habitat-api", version = "<1.0.0" }
json-patch = "0.2"
k8s-openapi = { version = "0.16.0", features = ["v1_24"], default-features = false }
kube = { version = "0.78", features = ["admission", "client"], default-features = false }
lazy_static = "1"
regex = "1"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
