[package]
name = "habitat-api"
version = "0.1.0"
rust-version = "1.60.0"
description = "habitat API"
edition = "2021"
license = "Apache-2.0"
authors = ["ZhengYu Xu <zen-xu@outlook.com>"]
repository = "https://github.com/zen-xu/habitat"

[dependencies]
k8s-openapi = { version = "0.16.0", features = ["v1_24", "schemars"], default-features = false }
kube = { version = "0.79", features = ["runtime", "derive", "client"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
